# gridgeo

./: .pre-commit-config.yaml  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  tests.yml
notebooks/: CFVariable.ipynb  pyugrid_vs_gridgeo.ugrid.ipynb
